# api_rust_axum

./: .env  .env.example  Cargo.toml
src/: db.rs  handler.rs  libs.rs  main.rs  route.rs  routes.rs  schema.rs
src/controllers/: mod.rs  path_controller.rs  query_controller.rs  root_controller.rs  user_controller.rs
src/handlers/: generic_handler.rs  home_handler.rs  mod.rs  note_handler.rs  user_handler.rs
src/macros/: mod.rs  print.rs  string.rs
src/models/: home_model.rs  mod.rs  note_model.rs  user_model.rs
src/responses/: mod.rs  note_response.rs
src/schemas/: mod.rs
src/services/: home_service.rs  mod.rs  note_service.rs  user_service.rs
src/structs/: mod.rs
